# atlas-cli-rust-plugin

./: Cargo.toml  README.md  dist-workspace.toml  manifest.yml
.github/workflows/: release.yml
